--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "matchmaker",
   "version": "1.0.0",
   "description": "Matchmaker",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/capena1991/matchmaker.git"
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@keyv/postgres": "https://github.com/capena1991/keyv-postgres",
+    "discord.js": "^13.6.0",
     "keyv": "^4.0.5",
     "typescript": "^4.5.5"
   },
