--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
   "arrowParens": "always",
   "printWidth": 120,
   "tabWidth": 2,
-  "trailingComma": "all"
+  "trailingComma": "all",
+  "singleQuote": true
 }
